[package]
name = "knob"
version = "0.1.0"
authors = ["Chris Allen <cma@bitemyapp.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
hyper = "0.12.24"
reqwest = "0.9.10"
serde = {version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
structopt = "0.2.14"
